# AI-Book

./: .env  BEGIN_HERE.md  CHATBOT_INTEGRATION.md  CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  HUGGINGFACE_DEPLOY.md  INDEX.md  QUICK_START.md  README_DEPLOYMENT.md  READY_TO_DEPLOY.md  START_HERE.md  VISUAL_GUIDE.md  chatbot-widget.js  demo.html  docusaurus.config.ts  error.txt  hf_app.py  package-lock.json  package.json  sidebars.ts  start.sh  test-integration.py  test-integration.sh
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
api/: placeholder.txt  proxy.js
backend/: .env  README.md  main.py  pyproject.toml  requirements.txt
docs/: hardware-compatibility.md  intro.md  troubleshooting.md
docs/ch04-physical-ai-applications/: _category_.json
docs/chapter-1/: _category_.json  lesson-1.md  lesson-2.md  lesson-3.md
docs/chapter-2/: _category_.json  lesson-1.md  lesson-2.md  lesson-3.md
docs/chapter-3/: _category_.json  lesson-1.md  lesson-2.md  lesson-3.md
docs/chapter-4/: _category_.json  lesson-1.md  lesson-2.md  lesson-3.md
frontend/: README.md  chat-iframe.html  index.html  script.js  server.py  styles.css
history/prompts/: 1-ros2-python-urdf-integration-plan.plan.prompt.md  1-ros2-python-urdf-integration-spec.spec.prompt.md  1-ros2-python-urdf-integration-tasks.tasks.prompt.md  (+1 more)
openai_agent_retrieval/: .env  README.md  agent.py  config.py  main.py  models.py  requirements.txt  retrieval.py  run_server.py  test_agent.py
(+89 files in other folders)
