[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-book-indexing"
version = "0.1.0"
description = "A tool to extract content from book websites, generate embeddings using Cohere, and store in Qdrant for RAG applications"
authors = [{name = "AI Assistant", email = "assistant@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cohere>=4.27",
    "qdrant-client>=1.9.2",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[project.scripts]
qdrant-book-index = "backend.main:main"